syntax = "proto3";//版本
option optimize_for = SPEED;//加快解析
option java_package = "com.xiaojie.netty.netty.protocol";

option java_outer_classname = "DataInfo";//生成的外部类名,同时也是文件名

message DataMessage {
  enum DataType{
    StudentType = 0;
    WorkerType = 1;
  }
  //用dataType来标识传的是哪一个枚举类型(序号)
  DataType dataType = 1;
  //表示每次枚举类型最多只能出现其中的一个,节省空间
  oneof dataBody {
    Student student = 2;
    Worker worker = 3;
  }

}
message Student {
  int32 id = 1;//Student 类中有一个属性,名字为id,类型为int32类型(protobuf类型) 1为属性序号,不是值
  string name = 2;

}

message Worker {
  string name = 1;
  int32 age = 2;

}